# Vibration-RUL-Prognostics

./: .env.example  .gitignore  README.md  TIMEFREQUENCY_INTEGRATION.md  docker-compose.dev.yml  docker-compose.yml  phm_data.db  pyproject.toml  test_algorithms_integration.py  test_timefrequency_api.py  test_timefrequency_integration.py
.claude/: settings.local.json
backend/: CONFIG_README.md  Dockerfile  __init__.py  buffer_manager.py  config.py  database.py  database_async.py  filterprocess.py  frequencydomain.py  harmonic_sildband_table.py  hilberttransform.py  initialization.py  main.py  phm_query.py  phm_temperature_models.py  phm_temperature_query.py  realtime_analyzer.py  redis_client.py  requirements.txt  test_config.py  timedomain.py  timefrequency.py  websocket_manager.py
docs/: ALGORITHMS_INTEGRATION.md  ALGORITHM_CONSOLIDATION.md  Architecture_Comparison.md  CSS-UNIFICATION.md  Contribution_Difficulty_Cline.md  EDWIN2012.md  ENVELOPE_ANALYSIS_ENHANCEMENT.md  EXPERIMENT.md  FILTER_FEATURES_INTEGRATION.md  FONT.md  FrequencyDomain.md  HPLCS_implementation.md  IMPLEMENTATION_SUMMARY.md  Initialization.md  RealTimeAnalysis.md  Realtime_Analysis_Implementation.md  SensorDataPushGuide.md  Software_Engineering_Challenges.md  Software_Engineering_Contributions.md  System_Analysis.md  TESTING_GUIDE.md  UML.md  WebSocket.md  frontend-env-config.md  qwen_envelope_analysis.md  qwen_frequency_domain_analysis.md  qwen_hilbert_transform_analysis.md  qwen_time_domain_analysis.md  qwen_time_frequency_analysis.md
frontend/: .env.example  .env.production.example  (+7 more)
(+46 files in other folders)
