[project]
name = "vibration-signals"
version = "0.1.0"
description = "Vibration analysis system for PHM (Prognostics and Health Management)"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "scipy==1.11.4",
    "PyWavelets==1.5.0",
]